@@ -35,8 +35,8 @@ import org.junit.runners.Parameterized;
 
 import java.nio.ByteBuffer;
 import java.nio.ByteOrder;
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 import java.util.Random;
 
 /**
@@ -61,18 +61,18 @@ public class HyperLogLogSerdeBenchmarkTest extends AbstractBenchmark
   public static Collection<Object[]> getParameters()
   {
     return ImmutableList.of(
-        (Object[]) Arrays.asList(new priorByteBufferSerializer(), new Long(1 << 10)).toArray(),
-        (Object[]) Arrays.asList(new newByteBufferSerializer(), new Long(1 << 10)).toArray(),
-        (Object[]) Arrays.asList(new newByteBufferSerializerWithPuts(), new Long(1 << 10)).toArray(),
-        (Object[]) Arrays.asList(new priorByteBufferSerializer(), new Long(1 << 8)).toArray(),
-        (Object[]) Arrays.asList(new newByteBufferSerializer(), new Long(1 << 8)).toArray(),
-        (Object[]) Arrays.asList(new newByteBufferSerializerWithPuts(), new Long(1 << 8)).toArray(),
-        (Object[]) Arrays.asList(new priorByteBufferSerializer(), new Long(1 << 5)).toArray(),
-        (Object[]) Arrays.asList(new newByteBufferSerializer(), new Long(1 << 5)).toArray(),
-        (Object[]) Arrays.asList(new newByteBufferSerializerWithPuts(), new Long(1 << 5)).toArray(),
-        (Object[]) Arrays.asList(new priorByteBufferSerializer(), new Long(1 << 2)).toArray(),
-        (Object[]) Arrays.asList(new newByteBufferSerializer(), new Long(1 << 2)).toArray(),
-    (Object[]) Arrays.asList(new newByteBufferSerializerWithPuts(), new Long(1 << 2)).toArray()
+        List.of(new priorByteBufferSerializer(), (long) (1 << 10)).toArray(),
+        List.of(new newByteBufferSerializer(), (long) (1 << 10)).toArray(),
+        List.of(new newByteBufferSerializerWithPuts(), (long) (1 << 10)).toArray(),
+        List.of(new priorByteBufferSerializer(), (long) (1 << 8)).toArray(),
+        List.of(new newByteBufferSerializer(), (long) (1 << 8)).toArray(),
+        List.of(new newByteBufferSerializerWithPuts(), (long) (1 << 8)).toArray(),
+        List.of(new priorByteBufferSerializer(), (long) (1 << 5)).toArray(),
+        List.of(new newByteBufferSerializer(), (long) (1 << 5)).toArray(),
+        List.of(new newByteBufferSerializerWithPuts(), (long) (1 << 5)).toArray(),
+        List.of(new priorByteBufferSerializer(), (long) (1 << 2)).toArray(),
+        List.of(new newByteBufferSerializer(), (long) (1 << 2)).toArray(),
+        List.of(new newByteBufferSerializerWithPuts(), (long) (1 << 2)).toArray()
     );
   }
 
